--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  height: 100%;
+}
+
 body {
   @apply bg-slate-800;
+}
+
+body {
+  @apply p-8 flex flex-col gap-8 text-slate-100 h-full;
 }
