Add a title/description panel using pursx

--- a/src/style.css
+++ b/src/style.css
@@ -10,14 +10,18 @@ body {
   @apply bg-slate-800;
 }
 
+a {
+  @apply text-teal-400 hover:underline underline-offset-2;
+}
+
 input[type=range] {
   @apply cursor-pointer appearance-none bg-transparent;
 }
 
 input[type=range]::-webkit-slider-thumb {
-  @apply appearance-none w-4 h-4 bg-emerald-400 rounded-full -mt-1.5;
+  @apply appearance-none w-4 h-4 bg-teal-400 rounded-full -mt-1.5;
 }
 
 input[type=range]::-webkit-slider-runnable-track {
-  @apply h-1 bg-emerald-400/50 rounded-full;
+  @apply h-1 bg-teal-400/50 rounded-full;
 }
