--- a/src/style.css
+++ b/src/style.css
@@ -18,11 +18,13 @@ input[type=range] {
   @apply cursor-pointer appearance-none bg-transparent;
 }
 
-input[type=range]::-webkit-slider-thumb {
-  @apply appearance-none w-4 h-4 bg-teal-400 rounded-full -mt-1.5;
+input[type=range]::-webkit-slider-thumb,
+input[type=range]::-moz-range-thumb {
+  @apply appearance-none border-none w-4 h-4 bg-teal-400 rounded-full -mt-1.5;
 }
 
-input[type=range]::-webkit-slider-runnable-track {
+input[type=range]::-webkit-slider-runnable-track,
+input[type=range]::-moz-range-track {
   @apply h-1 bg-teal-400/50 rounded-full;
 }
 
