--- a/src/style.css
+++ b/src/style.css
@@ -14,19 +14,39 @@ a {
   @apply text-teal-400 hover:underline underline-offset-2;
 }
 
+/* range slider */
+
+@layer components {
+  .range-thumb {
+    @apply appearance-none border-none w-4 h-4 bg-teal-400 rounded-full -mt-1.5;
+  }
+
+  .range-track {
+    @apply h-1 bg-teal-400/50 rounded-full;
+  }
+}
+
 input[type=range] {
   @apply cursor-pointer appearance-none bg-transparent;
 }
 
-input[type=range]::-webkit-slider-thumb,
-input[type=range]::-moz-range-thumb {
-  @apply appearance-none border-none w-4 h-4 bg-teal-400 rounded-full -mt-1.5;
+input[type=range]::-webkit-slider-thumb {
+  @apply range-thumb;
 }
 
-input[type=range]::-webkit-slider-runnable-track,
-input[type=range]::-moz-range-track {
-  @apply h-1 bg-teal-400/50 rounded-full;
+input[type=range]::-moz-range-thumb {
+  @apply range-thumb;
 }
+
+input[type=range]::-webkit-slider-runnable-track {
+  @apply range-track;
+}
+
+input[type=range]::-moz-range-track {
+  @apply range-track;
+}
+
+/* switch */
 
 input[type=checkbox].switch {
   @apply appearance-none relative h-6 w-10 bg-transparent border border-teal-400 rounded-full cursor-pointer
